kustomize/dev/flux-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        flux.weave.works/automated: "true"
        flux.weave.works/tag.realtime: semver:~1
    name: realtime
spec:
    template:
    spec:
        $setElementOrder/containers:
        - name: realtime
        containers:
        - image: gbaeke/realtime:1.0.5
        name: realtime
